--- a/style.css
+++ b/style.css
@@ -1,73 +1,60 @@
-body {
-  background-color: whitesmoke;
-}
-h1 {
-  text-align: center;
+* {
+  margin: 0;
+  scroll-behavior: auto;
 }
 
-.main {
-  text-align: left;
-  background-origin: padding-box;
-  border: 1px solid #ccc;
-  padding: 5px;
-  background-color: #7ad0dd3e;
-  font-family: "Times New Roman", Times, serif;
-}
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  padding: 0px;
-}
-.subgrid {
-  display: flex;
-}
-.grid-item1 {
-  flex: 13.4%;
-  border: 1px solid #ccc;
-  padding: 7px;
-}
-.grid-item2 {
-  flex: 80%;
-  border: 1px solid #ccc;
-  padding: 7px;
-}
-.grid-item {
-  text-align: left;
-  padding: 7px;
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
-}
-.grid1 {
-  display: grid;
-  grid-template-columns: repeat(17, 1fr);
-  padding: 0px;
-}
-.grid-item1 {
-  text-align: left;
-  padding: 7px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
+.no-border {
+  border: 0 !important;
 }
 
-.grid11 {
-  display: flex;
+.no-bg {
+  background-color: transparent !important;
 }
-.grid-item11 {
-  flex: 7.5%;
-  border: 1px solid #ccc;
-  padding: 7px;
+
+.bg-plusLight {
+  background-color: rgba(207, 238, 240, 0.37) !important;
 }
-.grid-item21 {
-  flex: 45%;
-  border: 1px solid #ccc;
-  font-size: 15px;
-  padding: 7px;
+
+.bg-plusLighter {
+  background-color: rgba(179, 196, 197, 0.39) !important;
 }
-.grid-item31 {
-  flex: 100%;
-  font-size: 15px;
-  border: 1px solid #ccc;
-  padding: 7px;
+
+.big-font {
+  font-size: 2.5cm !important;
+  font: bolder !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.big-font-2 {
+  font-size: 1.5cm !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.active {
+  font-style: oblique !important;
+}
+.ico-img {
+  transition: ease-in-out 0.21s;
+}
+.ico-img:hover {
+  transform: scale(1.4);
+}
+.nav-link {
+  transition: step-start(2);
+}
+.nav-link:hover {
+  transform: scaleX(1.1);
+}
+
+.hid {
+  opacity: 0.5;
+  filter: blur(2px);
+  transform: matrix(0.1, 0, 0, 0.1, 250, 50);
+  transition: all 1s;
+}
+.show-item {
+  opacity: 1;
+  filter: blur(0px);
+  transform: matrix(1, 0, 0, 1, 0, 0);
 }
