--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 * {
   margin: 0;
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
 }
-
+.scroll-behave {
+  scroll-snap-align: end;
+}
 .no-border {
   border: 0 !important;
 }
@@ -61,7 +63,7 @@
 
 .text-gradient {
   font-size: 50px !important;
-  background: -webkit-linear-gradient(rgb(145, 145, 145), #ff0019);
+  background: -webkit-linear-gradient(rgb(255, 102, 0), #ff0019);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   .idk {
